--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-sentence-transformers==2.2.2
-langchain
-pypdf
+fastapi
+uvicorn
+pydantic
 python-dotenv
-pinecone[grpc]
-langchain-pinecone
-langchain_community
-langchain_openai
-langchain_experimental
+openai
+faiss-cpu
+numpy
+PyPDF2
+python-docx
+chardet
+requests
+beautifulsoup4
